--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,8 @@
   "dependencies": {
     "chalk": "^4.1.0",
     "get-user-locale": "^1.4.0",
+    "iso-639-1": "^2.1.4",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.6",
     "word-definition": "^2.1.6"
   }
