--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
   "homepage": "https://github.com/tombstone001/dictionary#readme",
   "dependencies": {
     "chalk": "^4.1.0",
+    "dotenv": "^8.2.0",
     "get-user-locale": "^1.4.0",
     "iso-639-1": "^2.1.4",
     "jest": "^26.6.3",
     "nodemon": "^2.0.6",
+    "text-to-speech": "^1.0.10",
+    "unirest": "^0.6.0",
     "word-definition": "^2.1.6"
   }
 }
